--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -5,13 +5,19 @@
     <th>名称</th>
     <th>已完成？</th>
     <th>重要？</th>
+    <th>修改</th>
+    <th>删除</th>
   </tr>
   
   <% @todos.each do |todo| %>
     <tr>
-      <td><%= @todo.name %></td>
-      <td><%= @todo.done %></td>
-      <td><%= @todo.important %></td>
+      <td><%= todo.name %></td>
+      <td><%= todo.done %></td>
+      <td><%= todo.important %></td>
+      <td><%= '改' %></td>
+      <td><%= '删' %></td>
     </tr>
   <% end %>
 <table>
+
+<%= link_to '新建任务...', new_todo_path %>
