--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -16,7 +16,7 @@
       <td><%= todo.name %></td>
       <td><%= todo.done %></td>
       <td><%= todo.important %></td>
-      <td><%= '改' %></td>
+      <td><%= link_to '改', edit_todo_path(todo) %></td>
       <td><%= link_to '删', todo_path(todo), data: {
         turbo_method: :delete,
         turbo_confirm: "删除任务？"
