任务排序等

--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -15,12 +15,12 @@
 
   <p>
     <%= f.label :done, '完成？' %>
-    <%= check_box "todo", "done" %>
+    <%= f.check_box :done %>
   </p>
 
   <p>
     <%= f.label :important, '重要' %>
-    <%= check_box "todo", "important" %>
+    <%= f.check_box :important %>
   </p>
 
   <p>
