--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @todo do |f| %> 
+<%= form_with model: @todo do |f| %> 
   <% if @todo.errors.any? %>
     <h3>存在以下<%= @todo.errors.size %>個错误：</h3>
     <ul>
