--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,6 +1,17 @@
-<h1>任务清单（To-do list）</h1>
+<h1>任務清单（To-do list）</h1>
+<% if @liste %>
+  <h2>列表：<%= @liste.listname %></h2>
+<% else %>
+  <h2>首頁</h2>
+<% end %>
 
 <%= link_to '新建任务...', new_todo_path %>
+<% if @liste %>
+  <%= link_to '返回...', listes_path %>
+  <%= link_to '回到主页...', todos_path %>
+<% else %>
+  <%= link_to '查看自定义任务表...', listes_path %>
+<% end %>
 
 <%= form_with url: destroy_many_todos_path, method: 'delete' do %>
   <div id="buttons">
@@ -18,6 +29,7 @@
       <th>名称</th>
       <th>完成？</th>
       <th>重要？</th>
+      <th>更新时间</th>
       <th>修改</th>
       <th>删除</th>
     </tr>
@@ -32,7 +44,6 @@
           <%= "class=imp" %>
         <% end %>
       >
-
         <%# ids[]：数组类型的参数 %>
         <td><%= check_box_tag "ids[]", todo.id, false %></td>
 
@@ -47,7 +58,8 @@
             <%= '⭐' %>
           <% end %>
         </td>
-        <td><%= link_to '修改', edit_todo_path(todo) %></td>
+        <td><%= todo.updated_at %></td>
+        <td><%= link_to '修改...', edit_todo_path(todo) %></td>
         <td><%= link_to '删除', todo_path(todo), data: {
           turbo_method: :delete,
           turbo_confirm: "删除任务？"
