添加部分视窗，并分情况是否有上级模型

--- a/app/views/listes/index.html.erb
+++ b/app/views/listes/index.html.erb
@@ -2,7 +2,7 @@
 <h2>自定義任務表</h2>
 
 <div id="links">
-  <%= link_to '新建列表...', new_todo_path %>
+  <%= link_to '新建列表...', new_liste_path %>
   <%= link_to '回到主页...', todos_path %>
 </div>
 
