--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,3 +1,7 @@
+<% if @liste %>
+  <h2>列表：<%= @liste.listname %></h2>
+<% end %>
+
 <%= form_with model: @todo do |f| %> 
   <% if @todo.errors.any? %>
     <h3>存在以下<%= @todo.errors.size %>個错误：</h3>
