--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -2,8 +2,10 @@
   <h2>列表：<%= @liste.listname %></h2>
 <% end %>
 
+<%= @liste %>
+
 <%# 表单：若模型存在，则使用 PATCH 方法，反之使用 POST 方法 %>
-<%= form_with(model: @todo, url: has_liste(@liste)) do |f| %> 
+<%= form_with model: @todo do |f| %> 
   <% if @todo.errors.any? %>
     <h3>存在以下<%= @todo.errors.size %>個错误：</h3>
     <ul>
