--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <%# 表单：若模型存在，则使用 PATCH 方法，反之使用 POST 方法 %>
-<%= form_with model: @todo do |f| %> 
+<%= form_with model: model_has_liste(@liste, @todo) do |f| %> 
   <% if @todo.errors.any? %>
     <h3>存在以下<%= @todo.errors.size %>個错误：</h3>
     <ul>
