--- a/app/views/listes/index.html.erb
+++ b/app/views/listes/index.html.erb
@@ -20,8 +20,11 @@
       <td><%= liste.listname %></td>
       <td><%= liste.updated_at %></td>
       <td><%= link_to "查看...", liste_path(liste) %></td>
-      <td><%= link_to "改名...", liste_path(liste) %></td>
-      <td><%= "消除" %></td>
+      <td><%= link_to "改名...", edit_liste_path(liste) %></td>
+      <td><%= link_to "消除", liste_path(liste), data: {
+        turbo_method: :delete,
+        turbo_confirm: "删除列表？"
+      } %></td>
     </tr>
   <% end %>
 </table>
