--- a/app/views/listes/index.html.erb
+++ b/app/views/listes/index.html.erb
@@ -9,6 +9,7 @@
 <table id="todo_table">
   <tr>
     <th>列表名</th>
+    <th>列表作者</th>
     <th>列表更新时间</th>
     <th>查看列表</th>
     <th>重命名列表</th>
@@ -18,6 +19,7 @@
   <% @listes.each do |liste| %>
     <tr>
       <td><%= liste.listname %></td>
+      <td><%= liste.user.email %>
       <td><%= liste.updated_at %></td>
       <td><%= link_to "详细...", liste_path(liste) %></td>
       <td><%= link_to "改名...", edit_liste_path(liste) %></td>
