--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>您好，<%= @resource.email %></p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>由于多次尝试登入失败，您的帐户已被锁定</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>不过您可以解锁：</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to '解锁帐户', unlock_url(@resource, unlock_token: @token) %></p>
