可以登入错误时显示消息

--- a/app/views/welcome/_status.html.erb
+++ b/app/views/welcome/_status.html.erb
@@ -7,6 +7,6 @@
   } %>
 <% else %>
   <p>未登入</p>
-  <%= link_to '登入', new_user_session_path %>
-  <%= link_to '注册', new_user_registration_path %>
+  <%= link_to '登入...', new_user_session_path %>
+  <%= link_to '注册...', new_user_registration_path %>
 <% end %>
